# Xysgh-Debate-timer

./: CMakeLists.txt  LICENSE  README.md  mainwindow.cpp  mainwindow.h  resources.qrc
